fix: Use ubuntu-latest as runner

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -2,7 +2,7 @@ on: pull_request
 
 jobs:
   quality-assurance:
-    runs-on: linux
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
       - name: run test
